fixed leaderboards on mobile

--- a/app/assets/stylesheets/boxes.css
+++ b/app/assets/stylesheets/boxes.css
@@ -1,5 +1,5 @@
 #kd-leaderboard-header-box {
-  width: 350px;
+  max-width: 350px;
   height: 60px;
   background-color: #333333;
   border-radius: 25px 25px 0 0;
@@ -8,7 +8,7 @@
 }
 
 #wl-leaderboard-header-box {
-  width: 350px;
+  max-width: 350px;
   height: 60px;
   background-color: #333333;
   border-radius: 25px 25px 0 0;
